--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.12.1",
