--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 
 # testing
 /coverage
-
+.eslintcache
+*.eslintcache
 # production
 /build
 
@@ -21,9 +22,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.eslintcache
-.eslintcache
-.eslintcache
-.eslintcache
 src/components/Header.js
-.eslintcache
+
